# GeometryTools

./: README.txt
project.vs/: GeometryTool.sln  GeometryTool.vcxproj  GeometryTool.vcxproj.filters
sources/: CMakeLists.txt  main.cpp  pch.h  render_primitives.cpp  render_primitives.h  window.cpp  window.h
